--- a/Assets/Plugins/Android/AndroidManifest.xml
+++ b/Assets/Plugins/Android/AndroidManifest.xml
@@ -1,40 +1,31 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android" android:installLocation="preferExternal" package="com.example.admobtest" android:versionName="1.0" android:versionCode="1">
-	<supports-screens android:smallScreens="true" android:normalScreens="true" android:largeScreens="true" android:xlargeScreens="true" android:anyDensity="true" />
-
-	<!-- Google Mobile Ads Permissions -->
-	<uses-permission android:name="android.permission.INTERNET" />
-	<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
-	
-	<application android:icon="@drawable/app_icon" android:label="@string/app_name" android:debuggable="false">
-		<!-- meta-data tag for Google Play services -->
-		<meta-data android:name="com.google.android.gms.version" android:value="@integer/google_play_services_version"/>
-		
-		<activity android:name="com.unity3d.player.UnityPlayerProxyActivity" android:label="@string/app_name" android:configChanges="fontScale|keyboard|keyboardHidden|locale|mnc|mcc|navigation|orientation|screenLayout|screenSize|smallestScreenSize|uiMode|touchscreen" >
+<manifest xmlns:android="http://schemas.android.com/apk/res/android"
+   android:theme="@android:style/Theme.NoTitleBar" 
+   android:versionCode="1"
+   android:versionName="1.0"
+   package="com.unity3d.player"
+   android:installLocation="preferExternal">
+    
+    <uses-sdk android:minSdkVersion="9" android:targetSdkVersion="16" />
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <supports-screens android:anyDensity="true" android:largeScreens="true" android:normalScreens="true" android:smallScreens="true" android:xlargeScreens="true" />
+ 
+    <application android:icon="@drawable/app_icon" android:label="@string/app_name" android:debuggable="true">
+        <activity android:configChanges="fontScale|keyboard|keyboardHidden|locale|mnc|mcc|navigation|orientation|screenLayout|screenSize|smallestScreenSize|uiMode|touchscreen" android:label="@string/app_name" android:launchMode="singleTask" android:screenOrientation="fullSensor" android:name="com.unity3d.player.UnityPlayerNativeActivity">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+			
 			<!-- Required by Chartboost to be 'true' -->
-			<meta-data android:name="unityplayer.ForwardNativeEventsToDalvik" android:value="true" />
-			<intent-filter>
-			<action android:name="android.intent.action.MAIN" />
-			<category android:name="android.intent.category.LAUNCHER" />
-			</intent-filter>
-		</activity>
-		
-		<activity android:name="com.unity3d.player.UnityPlayerActivity" android:label="@string/app_name" android:configChanges="fontScale|keyboard|keyboardHidden|locale|mnc|mcc|navigation|orientation|screenLayout|screenSize|smallestScreenSize|uiMode|touchscreen" >
-		</activity>
-		
-		<activity android:name="com.unity3d.player.UnityPlayerNativeActivity" android:label="@string/app_name" android:configChanges="fontScale|keyboard|keyboardHidden|locale|mnc|mcc|navigation|orientation|screenLayout|screenSize|smallestScreenSize|uiMode|touchscreen" >
-			<meta-data android:name="unityplayer.ForwardNativeEventsToDalvik" android:value="true" />
-			<meta-data android:name="android.app.lib_name" android:value="unity" />
-		</activity>
-		
-		<activity android:name="com.unity3d.player.VideoPlayer" android:label="@string/app_name" android:configChanges="fontScale|keyboard|keyboardHidden|locale|mnc|mcc|navigation|orientation|screenLayout|screenSize|smallestScreenSize|uiMode|touchscreen" >
-		</activity>
-		
-		<!-- Google Mobile Ads Activity -->
-		<activity android:name="com.google.android.gms.ads.AdActivity" android:label="@string/app_name"	android:configChanges="fontScale|keyboard|keyboardHidden|locale|mnc|mcc|navigation|orientation|screenLayout|screenSize|smallestScreenSize|uiMode|touchscreen">
-		</activity>
-	</application>
-	
-	<uses-feature android:glEsVersion="0x00020000" />
-	<uses-sdk android:minSdkVersion="9" android:targetSdkVersion="19" />
+            <meta-data android:name="unityplayer.ForwardNativeEventsToDalvik" android:value="true" />
+        </activity>
+        
+		<!-- Required by Chartboost -->
+        <meta-data android:name="com.google.android.gms.version" android:value="@integer/google_play_services_version" />
+    </application>
+    <uses-feature android:glEsVersion="0x00020000" />
 </manifest>
